style.css
/* ... */
/* Comment content */
.comment-content {
	margin-left: 80px;
}

.no-avatar .comment-content {
	margin-left: 0;
}

/* Comment form */
.comment-form p {
	padding-bottom: 20px;
	margin-bottom: 0;
}

.required {
	color: #e06d5e;
	font-weight: normal;
}

/* No comments */
.no-comments {
	position: relative;
	padding-bottom: 20px;
	margin-bottom: 0;
	padding-top: 81px;
	margin-top: 60px;
	color: #7f8d8c;
	font-family: "PT Serif", serif;
	font-size: 0.73em;
	line-height: 1.3;
	font-style: italic;
	text-align: center;
}
@media screen and (max-width: 767px) {
	.no-comments {
		margin-top: 20px;
		padding-top: 41px;
	}
}
.no-comments:before {
	content: '';
	display: block;
	position: absolute;
	top: 0;
	z-index: 0;
	height: 1px;
	background: #f1f2f3;
	padding-left: 40px;
	padding-right: 40px;
	margin-left: -40px;
	width: 100%;
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
}
@media screen and (max-width: 767px) {
	.no-comments:before {
		padding-left: 20px;
		padding-right: 20px;
		margin-left: -20px;
	}
}
.no-comments a {
	color: inherit;
	text-decoration: none;
}
.no-comments a:hover, .no-comments a:focus, .no-comments a:active {
	color: #24282d;
}

/*--------------------------------------------------------------
Media
--------------------------------------------------------------*/
.page-content img.wp-smiley,
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}

/* Image Captions */
.wp-caption {
	padding: 10px;
	margin-bottom: 20px;
	max-width: 100%;
	width: auto;
	background: #f1f2f3;
	border: none;
}
.wp-caption img[class*="wp-image-"] {
	display: block;
	margin: 0;
}
.wp-caption .wp-caption-text,
.wp-caption .wp-caption-dd {
	margin: 10px 0 0;
	text-align: center;
	color: #7f8d8c;
	font-family: "PT Serif", serif;
	font-size: 0.73em;
	line-height: 1.3;
	font-style: italic;
	text-align: center;
}
.wp-caption .wp-caption-text a,
.wp-caption .wp-caption-dd a {
	color: inherit;
	text-decoration: none;
}
.wp-caption .wp-caption-text a:hover, .wp-caption .wp-caption-text a:focus, .wp-caption .wp-caption-text a:active,
.wp-caption .wp-caption-dd a:hover,
.wp-caption .wp-caption-dd a:focus,
.wp-caption .wp-caption-dd a:active {
	color: #24282d;
}

.widget .wp-caption {
	background: #525a5a;
}
.widget .wp-caption .wp-caption-text {
	color: inherit;
}

/* Galleries */
.gallery {
	padding: 20px 10px 0 10px;
	margin: 0 0 20px;
	background: #f1f2f3;
}
.gallery .gallery-item {
	float: left;
	padding: 0 10px 20px 10px;
	width: 100%;
}
.gallery .gallery-item .gallery-icon {
	position: relative;
	z-index: 1;
	text-align: center;
	line-height: 0;
}
.gallery .gallery-item .gallery-caption {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	margin: 10px 0 0;
	text-align: center;
	color: #7f8d8c;
	font-family: "PT Serif", serif;
	font-size: 0.73em;
	line-height: 1.3;
	font-style: italic;
	text-align: center;
}
.gallery .gallery-item .gallery-caption a {
	color: inherit;
	text-decoration: none;
}
.gallery .gallery-item .gallery-caption a:hover, .gallery .gallery-item .gallery-caption a:focus, .gallery .gallery-item .gallery-caption a:active {
	color: #24282d;
}
.gallery br {
	display: none;
}

.gallery-icon {
	text-align: center;
	line-height: 0;
}
.gallery-icon a,
.gallery-icon img {
	display: inline-block;
	margin: 0 auto;
	-webkit-transition: all 250ms ease;
	-moz-transition: all 250ms ease;
	-o-transition: all 250ms ease;
	transition: all 250ms ease;
}
.gallery-icon a {
	position: relative;
	background: #e06d5e;
	z-index: 0;
}
.gallery-icon a:before {
	content: '';
	display: block;
	position: absolute;
	top: 0;
	z-index: 1;
	padding: 20px;
	height: 100%;
	width: 100%;
	background: #e06d5e;
	opacity: 0;
	-webkit-background-clip: content-box;
	-moz-background-clip: content-box;
	background-clip: content-box;
	-webkit-transition: all 250ms ease;
	-moz-transition: all 250ms ease;
	-o-transition: all 250ms ease;
	transition: all 250ms ease;
}
.gallery-icon a:after {
	content: '';
	display: block;
	position: absolute;
	top: 50%;
	left: 50%;
	z-index: 2;
	margin-top: -5px;
	margin-left: -5px;
	height: 10px;
	width: 10px;
	background: url(img/plus.svg);
	opacity: 0;
	-webkit-transition: all 250ms ease;
	-moz-transition: all 250ms ease;
	-o-transition: all 250ms ease;
	transition: all 250ms ease;
}
.gallery-icon a:hover:before, .gallery-icon a:focus:before, .gallery-icon a:active:before {
	opacity: 0.75;
}
.gallery-icon a:hover:after, .gallery-icon a:focus:after, .gallery-icon a:active:after {
	opacity: 1;
}
.gallery-icon a:hover img, .gallery-icon a:focus img, .gallery-icon a:active img {
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	filter: grayscale(100%);
}
.gallery-icon img {
	margin: 0 auto;
	max-width: 100%;
	height: auto;
	border: none;
}

.tiled-gallery {
	margin: 0 0 20px;
}
.tiled-gallery.type-rectangular {
	background: #f1f2f3;
	border: 20px solid #f1f2f3;
}
.tiled-gallery .tiled-gallery-caption {
	background: #f1f2f3;
	color: #7f8d8c;
	font-family: "PT Serif", serif;
	font-size: 0.73em;
	font-weight: normal;
	font-style: italic;
}

.site-main .slideshow-window {
	margin: 0 0 20px;
	background: #f1f2f3;
	border: 20px solid #f1f2f3;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	-ms-border-radius: 0;
	-o-border-radius: 0;
	border-radius: 0;
}
.site-main .slideshow-window .slideshow-slide {
	margin: 0 auto;
}
.site-main .slideshow-window img {
	display: block;
}

/* Gallery Columns */
.gallery-columns-2 .gallery-item {
	margin-right: 0;
	width: 50%;
}

.gallery-columns-2 .gallery-item:nth-of-type(2n - 2) {
	clear: right;
	margin-right: 0;
}

.gallery-columns-3 .gallery-item {
	margin-right: 0;
	width: 33.33333%;
}

.gallery-columns-3 .gallery-item:nth-of-type(3n - 3) {
	clear: right;
	margin-right: 0;
}

.gallery-columns-4 .gallery-item {
	margin-right: 0;
	width: 25%;
}
/* ... */

